Added image resources for cards

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
   </div>
 </nav>
 <body>
-    <h1>Hello World</h1>
+    <h1>Pasara nami sir</h1>
     <!--Searchbar-->
     <!--Flex Container-->
     <!--Card-->
+    <img src="./assets/img/pasaramisir.PNG"></img>
     
 </body>
 </html>
